Add project to new branch